--- a/event-demo/package.json
+++ b/event-demo/package.json
@@ -15,6 +15,7 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
+    "@widgetbot/react-embed": "^1.7.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "react": "18.2.0",
