auth setup + games page started

--- a/.env
+++ b/.env
@@ -1,1 +1,13 @@
 NEXT_PUBLIC_GAMES_API="https://api.rawg.io/api"
+
+## Next auth
+NEXTAUTH_SECRET=my_ultra_secure_nextauth_secret
+NEXTAUTH_URL=http://localhost:3000
+
+## Discord API
+DISCORD_CLIENT_ID="1102790908971335690"
+DISCORD_CLIENT_SECRET="LVL0lmb4CpQR6iSaozZah2j1WJIah7cc"
+
+# Github API
+GITHUB_CLIENT_ID="Iv1.bdb97a97536058c7"
+GITHUB_CLIENT_SECRET="0461dfd4840e7eb32cc2f831fa7997a6acaff6d8"
