--- a/event-demo/package.json
+++ b/event-demo/package.json
@@ -11,6 +11,9 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@stitches/react": "^1.2.8",
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
