--- a/event-demo/package.json
+++ b/event-demo/package.json
@@ -16,9 +16,13 @@
     "@widgetbot/react-embed": "^1.8.2",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "jsonwebtoken": "8.5.1",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "8.5.1"
   }
 }
