--- a/event-demo/package.json
+++ b/event-demo/package.json
@@ -1,7 +1,7 @@
 {
   "name": "event-demo",
-  "version": "0.1.0",
-  "private": true,
+  "version": "v1.0.0",
+  "author": "WidgetBot Developers (WidgetBot.io)",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,9 +10,6 @@
   },
   "dependencies": {
     "@stitches/react": "^1.2.8",
-    "@types/node": "20.4.8",
-    "@types/react": "18.2.18",
-    "@types/react-dom": "18.2.7",
     "@widgetbot/react-embed": "^1.8.2",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
@@ -23,6 +20,9 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "8.5.1"
+    "@types/jsonwebtoken": "8.5.1",
+    "@types/node": "20.4.8",
+    "@types/react": "18.2.18",
+    "@types/react-dom": "18.2.7"
   }
 }
