--- a/event-demo/package.json
+++ b/event-demo/package.json
@@ -9,20 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@stitches/react": "^1.2.8",
     "@widgetbot/react-embed": "^1.8.2",
+    "autoprefixer": "^10.4.17",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "jsonwebtoken": "8.5.1",
     "next": "13.4.12",
+    "postcss": "^8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "5.1.6"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "8.5.1",
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
-    "@types/react-dom": "18.2.7"
+    "@types/react-dom": "18.2.7",
+    "easy-peasy": "^6.0.4"
   }
 }
