--- a/event-demo/package.json
+++ b/event-demo/package.json
@@ -18,6 +18,7 @@
     "postcss": "^8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-resizable-panels": "^2.0.13",
     "tailwindcss": "^3.4.1",
     "typescript": "5.1.6"
   },
@@ -26,6 +27,8 @@
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
-    "easy-peasy": "^6.0.4"
+    "easy-peasy": "^6.0.4",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.12"
   }
 }
