--- a/conferencing-demo/package.json
+++ b/conferencing-demo/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.9.2",
+    "@widgetbot/react-embed": "^1.9.0",
+    "lucide-react": "^0.363.0",
     "next": "^14.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zod": "^3.22.4"
+    "tailwind-merge": "^2.2.2",
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.2",
