re-run ci when workflow file changes

--- a/.github/workflows/event-demo.yaml
+++ b/.github/workflows/event-demo.yaml
@@ -3,6 +3,7 @@ name: 'Build And Push Event Demo'
 on:
   push:
     paths:
+      - '.github/workflows/event-demo.yaml'
       - 'event-demo/**'
 
 jobs:
