--- a/.github/workflows/event-demo.yaml
+++ b/.github/workflows/event-demo.yaml
@@ -19,7 +19,7 @@ jobs:
         run: echo ${{ secrets.PAT }} | docker login ghcr.io --username yomanz --password-stdin
 
       - name: Docker build
-        run: docker build -t ghcr.io/widgetbot-io/demos:event-demo event-demo
+        run: docker build -t ghcr.io/widgetbot-io/project-demos:event-demo event-demo
 
       - name: Docker push tag latest
-        run: docker push ghcr.io/widgetbot-io/demos:event-demo
+        run: docker push ghcr.io/widgetbot-io/project-demos:event-demo
