--- a/event-demo/Dockerfile
+++ b/event-demo/Dockerfile
@@ -1,6 +1,9 @@
 # Use an official Node.js runtime as a parent image
 FROM node:18-alpine
 
+# Install pnpm globally
+RUN npm install -g pnpm
+
 # Set the working directory inside the container
 WORKDIR /app
 
@@ -8,16 +11,16 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm ci
+RUN pnpm ci
 
 # Copy the rest of the application code to the working directory
 COPY . .
 
 # Build the Next.js app for production
-RUN npm run build
+RUN pnpm run build
 
 # Expose the port on which the app will run
 EXPOSE 3000
 
 # Start the Next.js app
-CMD ["npm", "run", "start"]
+CMD ["pnpm", "run", "start"]
