--- a/event-demo/Dockerfile
+++ b/event-demo/Dockerfile
@@ -10,6 +10,8 @@ WORKDIR /app
 # Copy package.json and package-lock.json (or yarn.lock) to the working directory
 COPY package*.json ./
 
+RUN ls
+
 # Install dependencies
 RUN pnpm install --frozen-lockfile
 
